Add matrix computation support.