@@ -10,7 +10,14 @@ public class DivExpression extends CalcExpression {
 
 	public Object evaluate(Context context) {
 		super.evaluate(context);
-		if (!getNumber()) return null;
-		return new Float(op1f / op2f);
+		if (prepareCalc()) {
+			if (op1v != null && op2v != null)
+				return op1v.div(op2v);
+			if (op1v != null && op2f != Float.NaN)
+				return op1v.div(op2f);
+			if (op1f != null && op2f != null)
+				return Float.valueOf(op1f / op2f);
+		}
+		return null;
 	}
 }
